Narrower tooltip on Permissions screen to avoid cutoff on right side

--- a/common/css/presspermit.css
+++ b/common/css/presspermit.css
@@ -28,6 +28,9 @@
   white-space: normal;
   /* Arrow */
 }
+body.toplevel_page_presspermit-groups [data-toggle="tooltip"] .tooltip-text {
+  min-width: 150px;
+}
 [data-toggle="tooltip"] .tooltip-text a {
   color: #a0e0ff;
   text-decoration: underline;
